--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -18,6 +18,11 @@ $secondary-header-min-height: 4.125rem !default;
 $secondary-header-no-tabs-height: 5.5rem !default;
 $secondary-header-max-height: 7.75rem !default;
 
+// secondary header wrapper height
+$secondary-header-min-wrapper: 5.75rem !default;
+$secondary-header-med-wrapper: 6.75rem !default;
+$secondary-header-max-wrapper: 8rem !default;
+
 // mcm overview cards
 $overview-column-width: 10px !default; /* card width must be multiple of this */
 // also change CARD_SPACING in constants.js
